# actix-diesel-auth-scaffold

./: .gitignore  Cargo.toml  README.md
examples/: jwt.rs
migrations/2019-01-29-055113_create_users/: down.sql  up.sql
src/: auth.rs  builder.rs  config.rs  database.rs  db.rs  error.rs  executor.rs  lib.rs  main.rs  models.rs  oauth.rs  oauth2.rs  routes.rs  schema.rs  state.rs  user.rs
src/auth/: db.rs  models.rs  routes.rs
src/db/: oauth.rs  user.rs
src/routes/: oauth.rs  user.rs
src/user/: db.rs  model.rs  routes.rs  schema.rs
