[package]
name = "actix-diesel-auth-scaffold"
#version = "0.0.2-alpha"
version = "0.1.0"
authors = ["Samuel Marks @SamuelMarks"]
edition = "2018"

[dependencies]
#actix-web = "0.7.18"
#dotenv = "0.13.0"
#diesel = {version="1.4.1", features=["postgres"]}
#lazy_static = "1.2.0"
#r2d2_postgres = "0.14.0"
#r2d2 = "*"

bytes = "0.4"
env_logger = "0.5"

actix = "0.7"
actix-web = "0.7"

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
ring = "*"