[package]
name = "actix-diesel-auth-scaffold"
version = "0.0.1"
authors = ["Samuel Marks @SamuelMarks"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = [ "r2d2", "sqlite" ] }
actix = "0.8.3"
num_cpus = "1.10.1"
once_cell = "1.1.0"
futures = "0.1.29"
derive_more = "0.15.0"
r2d2 = "0.8.5"
failure = { version = "0.1.5", optional = true }
actix-web = {git = "https://github.com/offscale/actix-web", branch = "pub-app"}
lazy_static = "1.4.0"
serde = { version = "1.0.100", features = [ "derive" ] }
pretty_env_logger = "0.3.1"
serde_derive = "1.0.100"
